
DROP4.1:
-Some systems don't have strndup() - sorry, overread that it's a GNU extension
 so let configure check and have a replacement function ready [QUICKFIX]
 Thanks to Jim Sandoz

DROP4:
-Compile fix for arpwatch.c - report_mode was missing
-Segfault fix for arpwatch.c<-report.c: report_f was not initialized
-Apply vendor security patch against hostname overflow + strcpy()->strncpy()
-Shorten checkpoint time from 15 to 10 minutes (even lower values sensible?)

DROP3:
-Close stdin/out/err in daemon mode again
-report() is now a dispatching function for the actual reporting function
-Change notification codes from clear-text("new station") to int
-Add defines for the former and lookup table
-Change all calls to report() to use ACTION_ defines
-DECNet Flipflops are also reported via report(), not dosyslog()

DROP2:
-Add stdout reporting mode (switch -m)
-Update ethercodes from nmap-3.81

DROP1:
-Remove all unnecessary (void) casts when retcode was not used
-Update ethercodes.dat to the ones from nmap
-indent the code
-Remove register hints for variables (nothing really considered)
-Remove {scss,rcs}id 


-- FORKED Mon Feb  7 13:31:36 CET 2005

@(#) $Id: CHANGES,v 1.41 2004/01/22 22:25:43 leres Exp $ (LBL)

v2.1 Thu Jan 22 14:05:27 PST 2004

- Add FDDI support. Based on code contributed by Flemming Johansen
  (fsj@csd.cri.dk)

- New -f flag overrides the default database filename.

- New -r flag allows tcpdump save files to be read.

- memcpy() doesn't handle overlapping buffers so use bcopy() instead.
  Reported by Attila Bruncsak (attila.bruncsak@itu.int)

- Have configure determine the sendmail path.

- Don't bother updating hostnames when reading arp.dat since this can
  be expensive in the number of dns requests generated.

- Improve robostness of the aprfetch script.

- Update massagevendor to convert the IEEE public Organizationally
  Unique Identifier (OUI) file format.

- Don't use -e with awk, not all versions support it. Suggested by