@@ -1,2 +1,0 @@
-#define WATCHER "root"
-#define WATCHEE "arpwatch (Arpwatch)"
